<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_menu"
            android:icon="@drawable/ic_restaurant_black_24dp"
            android:title="@string/menu" />

        <!--<item-->
            <!--android:id="@+id/nav_emailaddress2"-->
            <!--android:icon="@drawable/ic_email_black_24dp"-->
            <!--android:title="@string/email_address" />-->

        <!--<item-->
            <!--android:id="@+id/nav_presetLocatipon"-->
            <!--android:icon="@drawable/ic_add_location_black_24dp"-->
            <!--android:title="@string/home_address" />-->

        <item
            android:id="@+id/nav_password"
            android:icon="@drawable/ic_security_black_24dp"
            android:title="@string/change_password" />

        <item
            android:id="@+id/nav_orders"
            android:icon="@drawable/ic_access_time_black_24dp"
            android:title="@string/all_orders" />

        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_exit_to_app_black_24dp"
            android:title="@string/sign_out" />

        <item
            android:id="@+id/nav_send_login_details"
            android:icon="@drawable/ic_supervisor_account_black_24dp"
            android:title="@string/resend_login_details" />

        <!--<item-->
            <!--android:id="@+id/nav_removeuser"-->
            <!--android:icon="@drawable/ic_delete_forever_black_24dp"-->
            <!--android:title="@string/delete_user_data" />-->
    </group>

</menu>
