<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context="a123.vaidya.nihal.foodcrunchserver.Signin">

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_alignParentBottom="true"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:weightSum="2"
        android:orientation="vertical"
        android:paddingBottom="80dp">


        <com.rengwuxian.materialedittext.MaterialEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/edtPhone"
            android:hint="@string/enter_your_phone_number"
            android:text="@string/_7208680470"
            android:textColor="@android:color/white"
            android:textSize="36sp"
            android:inputType="phone"
            app:met_baseColor="@android:color/white"
            app:met_floatingLabel="highlight"
            app:met_maxCharacters="11"
            app:met_primaryColor="@android:color/white"
            app:met_singleLineEllipsis="true"
            />

        <com.rengwuxian.materialedittext.MaterialEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edtPasswd"
        android:hint="@string/enter_your_password"
        android:text="@string/_11111111"
        android:textColor="@android:color/white"
        android:textSize="36sp"
        android:inputType="textPassword"
        app:met_baseColor="@android:color/white"
        app:met_floatingLabel="highlight"
        app:met_maxCharacters="11"
        app:met_primaryColor="@android:color/white"
        app:met_singleLineEllipsis="true"
        />

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:weightSum="2"
            android:layout_height="wrap_content">

            <com.rey.material.widget.CheckBox
                android:id="@+id/remember_button"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_width="0dp"
                style="@style/Material.Drawable.CheckBox"
                android:text="@string/RememberMe"
                android:textSize="24sp"
                android:textColor="@android:color/white"
                android:gravity="center_vertical">

            </com.rey.material.widget.CheckBox>

            <TextView
                android:id="@+id/forget_password_txt"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:text="@string/forget_pwd"
                android:textSize="24sp"
                android:layout_width="0dp"
                android:layout_weight="1"
                />

        </LinearLayout>
    </LinearLayout>


    <info.hoang8f.widget.FButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btnSignin"
        android:textColor="@android:color/white"
        android:layout_margin="5dp"
        android:layout_alignParentBottom="true"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:text="@string/Signin"
        app:shadowColor="@android:color/black"
        app:shadowHeight="5dp"
        />



</RelativeLayout>
