<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:background="@color/fbutton_color_transparent"
    app:cardElevation="5dp"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_gravity="center_vertical"
            android:layout_marginBottom="15dp"
            android:orientation="horizontal"
            android:baselineAligned="false">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="9"
                >

                <TextView
                    android:id="@+id/order_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginEnd="10dp"
                    android:layout_marginStart="10dp"
                    android:text="@string/_11111"
                    android:textAllCaps="true"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/order_status"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginEnd="10dp"
                    android:layout_marginStart="10dp"
                    android:text="@string/status"
                    android:textAllCaps="true"
                    android:textStyle="italic" />

                <TextView
                    android:id="@+id/order_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginEnd="10dp"
                    android:layout_marginStart="10dp"
                    android:text="@string/_7208680470"
                    android:textAllCaps="true"
                    android:textStyle="italic" />

                <TextView
                    android:id="@+id/comment_details"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginEnd="10dp"
                    android:layout_marginStart="10dp"
                    android:text="@string/Write_comment"
                    android:textAllCaps="true"
                    android:textStyle="italic" />

                <TextView
                    android:id="@+id/order_address"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginEnd="10dp"
                    android:layout_marginStart="10dp"
                    android:text="@string/my_new_address"
                    android:textAllCaps="true"
                    android:textStyle="italic" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_weight="4"
        android:layout_height="wrap_content">

        <info.hoang8f.widget.FButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnEdit"
        android:layout_weight="2"
        android:textColor="@android:color/white"
        android:layout_margin="5dp"
        android:layout_alignParentBottom="true"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        app:shadowColor="@android:color/black"
        app:buttonColor="@color/colorAccent"
        app:shadowHeight="5dp"
        android:text="@string/edit"
        />
        <info.hoang8f.widget.FButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnRemove"
        android:layout_weight="2"
        android:textColor="@android:color/white"
        android:layout_margin="5dp"
        android:layout_alignParentBottom="true"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        app:shadowColor="@android:color/black"
        app:buttonColor="@color/colorAccent"
        app:shadowHeight="5dp"
        android:text="@string/REMOVE"
        />
        <info.hoang8f.widget.FButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnDetails"
        android:layout_weight="2"
        android:textColor="@android:color/white"
        android:layout_margin="5dp"
        android:layout_alignParentBottom="true"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        app:shadowColor="@android:color/black"
        app:buttonColor="@color/colorAccent"
        app:shadowHeight="5dp"
        android:text="@string/DETAILS"
        />
        <info.hoang8f.widget.FButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnDirections"
        android:layout_weight="2"
        android:textColor="@android:color/white"
        android:layout_margin="5dp"
        android:layout_alignParentBottom="true"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        app:shadowColor="@android:color/black"
        app:buttonColor="@color/colorAccent"
        app:shadowHeight="5dp"
        android:text="@string/DIRECTIONS"
        />

        </LinearLayout>

    </LinearLayout>


</android.support.v7.widget.CardView>