<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:padding="15dp"
    tools:context="a123.vaidya.nihal.foodcrunchserver.Cart">
<<<<<<< HEAD
<<<<<<< HEAD
=======
=======
>>>>>>> old2/master
    <TextView
        android:id="@+id/txtmanconetnthom3e"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/transparentBlack"
        android:gravity="center"
        android:paddingTop="30dp"
        android:text="@string/EMPTY_LIST"
        android:textColor="@color/white"
        android:textSize="25sp" />
<<<<<<< HEAD
>>>>>>> old1/master
=======
>>>>>>> old2/master
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/txtmanconesdstnthome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/Your_cart"
            android:textColor="@color/white"
<<<<<<< HEAD
<<<<<<< HEAD
            android:textSize="30dp" />
=======
            android:textSize="25sp" />
>>>>>>> old1/master
=======
            android:textSize="25sp" />
>>>>>>> old2/master

    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/listCart"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:background="@android:color/transparent"
        android:paddingBottom="120dp"
        android:paddingTop="45dp">

    </android.support.v7.widget.RecyclerView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        app:cardBackgroundColor="@color/colorPrimary">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/total"
                    android:textColor="@android:color/white"
                    android:textSize="20sp" />

                <ImageView
<<<<<<< HEAD
<<<<<<< HEAD
                    android:layout_width="wrap_content"
=======
                    android:layout_width="0dp"
>>>>>>> old1/master
=======
                    android:layout_width="0dp"
>>>>>>> old2/master
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:contentDescription="@string/todo"
                    android:src="@drawable/ic_action_name_dark" />

                <TextView
                    android:id="@+id/total"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_0"
                    android:textColor="@android:color/white"
                    android:textSize="24sp" />


            </LinearLayout>

            <info.hoang8f.widget.FButton
                android:id="@+id/btnPlaceOrder"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_margin="5dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:text="@string/place_order"
                android:textColor="@android:color/white"
                app:shadowColor="@android:color/black"
                app:shadowHeight="5dp" />


        </RelativeLayout>

    </android.support.v7.widget.CardView>

</RelativeLayout>
