<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/order_info"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:background="@color/fbutton_color_transparent"
    app:cardElevation="5dp"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_gravity="center_vertical"
        android:layout_marginBottom="15dp"
        android:orientation="horizontal"
        android:baselineAligned="false">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="9"
            >

            <TextView
                android:id="@+id/product_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"
                android:text="@string/product_name"
                android:textAllCaps="true"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/product_quantitiy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"
                android:text="@string/product_quantity"
                android:textAllCaps="true"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/product_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"
                android:text="@string/product_price"
                android:textAllCaps="true"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/product_discount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"
                android:text="@string/product_discount"
                android:textAllCaps="true"
                android:textStyle="italic" />


        </LinearLayout>



    </LinearLayout>

</android.support.v7.widget.CardView>